# dry-wet-agent-loop-operator-system

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINTS.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_ZH.md  REPRODUCE.md  conftest.py  mkdocs.yml  pyproject.toml
analysis_backends/: __init__.py  base.py  deterministic.py  objects.py
claims/: claims.yaml  deviations.yaml  ledger.json
device_ir/: __init__.py  ir.py
docs/: ADAPTER_ACTIONS.md  ARCHITECTURE.md  ARCHITECTURE_V2_PROPOSAL.md  BIOLOGY_PROGRAM_2026.md  BUILD_PLAN.md  CAPABILITY_MODEL.md  CLAIM_LEDGER.md  CLI_DESIGN.md  CONTROLLER_MODEL.md  DEEP_REVIEW.md  DEMO_SCRIPT.md  ENGINEERING.md  EVENT_SCHEMA.md  EVIDENCE_TYPING.md  M16_MIN_LOOP.md  M17_KNOWLEDGE_FEEDBACK.md  M18_LLM_LIVE_SMOKE.md  M24_CELL_FREE_EXPRESSION.md  M24_CONTRACT_V3.md  M24_KERNEL_NEUTRALITY_MAP.md  M24_REPO_MAP.md  M5_DESIGN.md  M6_DESIGN.md  M9_PROTOCOL.md  MCP_SURFACE.md  MR_REGISTRY.md  OS_PRINCIPLES.md  PAPER_OUTLINE.md  PHASE4_WIRING_SPEC.md  PLATFORM_VISION.md  PLUGIN_API_DRAFT.md  R3_INPUTS.md  REFERENCE_MAP.md  RESEARCH_OS_VNEXT.md  ROADMAP_BIOLOGY_PRIMARY.md  ROADMAP_V2.md  RUNS_INDEX_DESIGN.md  RUN_MANIFEST_SPEC.md  SOFT_TRUST_PROPOSAL.md  STRESS_TEST_LOOP.md  (+10 more)
domains/: catalyst_screen.yaml  cell_free_expression_screen.yaml  coating.yaml  crystal.yaml  solvent_screen.yaml  solvent_screen_flipped.yaml
expos/: __init__.py  cli.py  domain.py  errors.py  loop.py  mcl.py
expos_mcp/: __init__.py  server.py
hypotheses/: __init__.py  objects.py  proposer.py  ranking.py
mailbox/: README.md
protocols/: __init__.py  __main__.py  constraints.py  experiment.py  objects.py
scripts/: backup_incremental.py  claim_compiler.py  expos_lint.py  expos_lint.py.orig  expos_readiness_report.py  expos_report.py  gen_sweep.py  generate_readiness_evidence.py  llm_smoke_stage1.py  llm_smoke_stage2.py  make_demo.py  plot_run.py  preflight_e2e.sh  ratchet.py  run_loop.py  verify_run_chain.py
tests/: test_adapters.py  test_agent.py  test_agent_backend_switch.py  test_agent_llm.py  test_agent_truth_isolation.py  test_attribution.py  test_bio_seams_e2e.py  test_claim_compiler.py  test_cli.py  test_coating_domain.py  test_compare.py  test_content_store.py  test_crash_consistency.py  test_design.py  test_domain_provider.py  test_dry_reuse_key.py  test_eval.py  test_expos_lint.py  test_expos_report.py  test_failure_model.py  test_harness_record.py  test_k_a_claims.py  test_k_b_aggregation.py  test_k_c_wiring.py  test_k_e_acceptance.py  test_k_f_glue.py  test_k_flipped_domain.py  test_k_replicate_substrate.py  test_kb.py  test_kernel.py  test_kernel_robustness.py  test_llm_smoke_stage1.py  test_loop_e2e.py  test_loop_m6m7.py  test_loop_m8.py  test_loop_os.py  (+71 more)
(+495 files in other folders)
